Fixed size for round robin items
This solves the issue for items that are not visible during render pahse
but are shown later.

--- a/css/main.css
+++ b/css/main.css
@@ -486,6 +486,8 @@ div.learn, div.teach {
     padding-bottom: 25px;
     line-height: 1.2;
     margin-right: 105px;
+    width: 784px;
+    height: 358px;
 }
 
 #onlineSection .slides .icons_online {
